OCE-546: Upgrade spring security swagger and other dependencies